# Flight-Delay

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  model-buckets.ipynb  model-classifier-wang.ipynb  model-classifier.ipynb  model-preliminary.ipynb  model-training.ipynb  pyproject.toml
data/flight_info/: Marketing_Airline_Lookup.csv  Operating_Aireline_lookup.csv  Origin_Airport_Lookup.csv  Origin_Airport_Sequence_Lookup.csv  Origin_City_Market_ID_Lookup.csv  T_AIRCRAFT_TYPES.csv
data/flights/: Detailed_Statistics_Departures-10.csv  Detailed_Statistics_Departures-11.csv  Detailed_Statistics_Departures-12.csv  Detailed_Statistics_Departures-13.csv  Detailed_Statistics_Departures-2.csv  Detailed_Statistics_Departures-3.csv  Detailed_Statistics_Departures-4.csv  Detailed_Statistics_Departures-5.csv  Detailed_Statistics_Departures-6.csv  Detailed_Statistics_Departures-7.csv  Detailed_Statistics_Departures-8.csv  Detailed_Statistics_Departures-9.csv  Detailed_Statistics_Departures.csv  Flight_Data_With_Aircraft_Info.parquet  Full_Flight_Data.parquet  ME_Flight_Delay_10_Oct-24.csv  ME_Flight_Delay_11_Nov-24.csv  ME_Flight_Delay_12_Dec-24.csv  ME_Flight_Delay_13_Jan-25.csv  ME_Flight_Delay_14_Feb-25.csv  ME_Flight_Delay_15_Mar-25.csv  ME_Flight_Delay_16_April-25.csv  ME_Flight_Delay_17_May-25.csv  ME_Flight_Delay_18_June-25.csv  ME_Flight_Delay_19_July-24.csv  ME_Flight_Delay_1_Jan_24.csv  ME_Flight_Delay_20_Aug-25.csv  ME_Flight_Delay_2_Feb_24.csv  (+15 more)
docs/: Report.html  search.json
report/: Report.html  Report.qmd  _quarto.yml  references.bib
(+19 files in other folders)
