[project]
name = "flight-delay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.95",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isd-fetch>=0.1.8",
    "matplotlib>=3.10.9",
    "polars>=1.39.3",
    "pre-commit>=4.5.1",
    "scikit-learn>=1.8.0",
    "skl2onnx>=1.20.0",
]

[tool.uv]
exclude-newer = "7 days"
